--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -37,8 +37,8 @@ spring:
             indent-output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:h2:file:./target/h2db/db/myapp;DB_CLOSE_DELAY=-1
-        username: myapp
+        url: jdbc:mariadb://localhost/myapp
+        username: root
         password:
         hikari:
             auto-commit: false
